--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -25,7 +25,7 @@ UW000000:
     - key: Filename
       value: logo.svg
     - key: Artist
-      value: "Jony Ive"
+      value: "0xADADA"
     - key: Format
       value: Adhesive on printed paper
     - key: Application
