--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -44,15 +44,22 @@ UWXXXXXX:
   external_sku: TODO
   quantity: 1
   description: |
-    The baroque period of the arts was the first period in which the historical
-    time created by the nobility and ruling classes was able to express itself
-    as a predominant influence in the discipline of the arts. With the beginning
-    of the Enlightenment, the christian world and its explanation of reality was
-    challenged by science, rationality, lutheranism, and the protestants. The
-    christian world had suddenly lost its unified center, the last remaining
-    vestiges of the mythical society which had emerged from the Roman Empire had
-    finally lost its singular grasp on society, which it had held during the
-    middle ages.
+    Book by Guy Debord, with a new translation by 0xADADA.
+    <p>
+    This book, and Debordʼs ideas, describe the way we live in the contemporary
+    era. The power in his ideas lies in their ability to question, identify, and
+    name the common assumptions of our period, and ultimately develops the
+    concept of The Spectacle, describing the “gaze” of contemporary culture. It
+    continues to influence a variety of philosophical and political movements,
+    most notably anti-capitalism, culture jamming, and anarchism.
+    </p>
+    <div style="margin:3rem 0">
+      <a class="book-container" href="https://unredacted-word.pub">
+        <div class="book">
+          <img alt="The Society of the Spectacle by Guy Debord" src="/static/catalog/uw000001/cover-3d-458x539.png" />
+        </div>
+      </a>
+    </div>
   features:
     - key: Title (Original)
       value: La Societé du Spectacle
