--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -38,7 +38,7 @@ UW000000:
       value: © 2018-2019 Unredacted Word, LLC
 
 UW010301:
-  name: "The Society of the Spectacle (Web book)"
+  name: "The Society of the Spectacle (Web eBook)"
   sku: "UW010301"
   url: "/catalog/uw010301-spectacle"
   external_sku: TODO
