--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -94,7 +94,7 @@ UW010301:
     - key: Format
       value: eBook (Website)
     - key: ISBN
-      value: "978-1-7369618-0-3"
+      value: "9781736961803"
     - key: Size
       value: "Responsive website, 3 layouts (inline, float, sidenotes)"
     - key: Dust Jacket design
