--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -35,20 +35,21 @@ UW000000:
     - key: Edition
       value: 1&ordm; / 50 copies
     - key: Copyright
-      value: © 2018-2019 Unredacted Word, LLC
+      value: © 2018-2021 Unredacted Word, LLC
 
-UW010301:
-  name: "The Society of the Spectacle (Web eBook)"
-  sku: "UW010301"
-  url: "/catalog/uw010301-spectacle"
-  external_sku: TODO
-  date: 2021-03-27 21:00:00
+UW010101:
+  name: "The Society of the Spectacle (pre-order)"
+  sku: "UW010101"
+  url: "/catalog/uw010101-spectacle"
+  external_sku: sku_JCmkFFh767juPU
+  date: 2021-04-01 21:00:00
   quantity: 1
-  price: false
+  price: "$34.95"
+  cta: "Pre-order"
   description: |
     <p>
-      A web edition of our new translation of Debord's <em>The Society of
-      the Spectacle</em>.
+      A linen bound hardcover edition of our new translation of Debord's <em>The
+      Society of the Spectacle</em>.
     </p>
     <p>
       Debord describes and critiques the way we live. The power in these ideas
@@ -75,6 +76,74 @@ UW010301:
         </div>
       </a>
     </div>
+    <p>
+      A new English Edition by Ron. Adams.
+    </p>
+  features:
+    - key: Title (Original)
+      value: La Societé du Spectacle
+    - key: Author
+      value: Guy Debord
+    - key: Translator
+      value: "Ron. Adams"
+    - key: Release
+      value: April 2021
+    - key: Format
+      value: Hardcover (linen bound)
+    - key: Size
+      value: US Trade (6x9 inches)
+    - key: Pages
+      value: 247
+    - key: ISBN
+      value: "9781736961810"
+    - key: Edition
+      value: First
+    - key: Print run
+      value: 1&ordm; / 50 copies
+    - key: Dust Jacket design
+      value: "0xADADA"
+    - key: Pricing detail
+      value: "$34.95 is $27.95 for the book and $7 flat shipping fee."
+    - key: Rights
+      value: "Copyleft 🄯 2021 █ Unredacted Word, LLC, Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License"
+    - key: Shipping
+      value: "Shipping orders starting at the end of April, or early May 2021."
+
+
+UW010301:
+  name: "The Society of the Spectacle (Web eBook)"
+  sku: "UW010301"
+  url: "/catalog/uw010301-spectacle"
+  external_sku: TODO
+  date: 2021-03-27 21:00:00
+  quantity: 1
+  price: false
+  image:
+    src: /static/catalog/uw010301/cover.png
+    alt: Cover of The Society of the Spectacle
+  description: |
+    <p>
+      A web edition of our new translation of Debord's <em>The Society of
+      the Spectacle</em>.
+    </p>
+    <p>
+      Debord describes and critiques the way we live. The power in these ideas
+      lies in their ability to question, identify, and name the common
+      assumptions of the present. Developing the concept of The Spectacle, he
+      describes the “gaze” of contemporary society. From its publication just
+      before, and ultimately influencing the May 1968 revolt in Paris and Occupy
+      Wall Street, this book continues to transform a wide range of progressive
+      philosophical and political movements, most notably anti-capitalism,
+      postmodernism, marxism, and anarchism.
+    </p>
+    <p>
+      This new translation brings a concrete edge to the text, elaborating upon
+      the original, and adding annotations. Bringing fifty years of prominent
+      radical thinking back to the text, from Baudrillard to Odell to
+      Zuboff—it’s clear that Debords’ book is more relevant in the era of social
+      media, the attention economy, and the emergence of Surveillance Capitalism
+      than ever before.
+    </p>
     <p>
       A new English Edition by Ron. Adams.
     </p>
