--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -1,42 +1,3 @@
-UW000000:
-  name: "Logo Sticker"
-  sku: UW000000
-  external_sku: sku_GFlC0zzBrcHvid
-  date: 2019-11-26 00:00:00
-  quantity: 1
-  price: "$0.50"
-  url: /catalog/uw000000-logo-sticker
-  image:
-    src: /static/catalog/uw000000/logo-sticker-610x376.png
-    alt: Sticker photo
-  image_assortment:
-    - src: /static/catalog/uw000000/logo-sticker-610x376.png
-      alt: Sticker photo
-    - src: /static/catalog/uw000000/logo-sticker-610x376.png
-      alt: Sticker photo
-    - src: /static/catalog/uw000000/logo-sticker-610x376.png
-      alt: Sticker photo
-    - src: /static/catalog/uw000000/logo-sticker-610x376.png
-      alt: Sticker photo
-  description: |
-    Unredacted Word logo, die cut stickers. Collect emʼ, trade emʼ
-    with your friends, put them in mysterious places.
-  features:
-    - key: Filename
-      value: logo.svg
-    - key: Artist
-      value: "0xADADA"
-    - key: Format
-      value: Adhesive on printed paper
-    - key: Application
-      value: Google Drawings, VIM, SVGOMG
-    - key: Size
-      value: 2" x 1.18
-    - key: Edition
-      value: 1&ordm; / 50 copies
-    - key: Copyright
-      value: © 2018-2021 Unredacted Word, LLC
-
 UW010101:
   name: "The Society of the Spectacle (pre-order)"
   sku: "UW010101"
@@ -173,4 +134,42 @@ UW010301:
     - key: Price
       value: "$0.00 (Gratis/Free)"
 
+UW000000:
+  name: "Logo Sticker (SOLD OUT)"
+  sku: UW000000
+  external_sku: sku_GFlC0zzBrcHvid
+  date: 2019-11-26 00:00:00
+  quantity: 1
+  price: false
+  url: /catalog/uw000000-logo-sticker
+  image:
+    src: /static/catalog/uw000000/logo-sticker-610x376.png
+    alt: Sticker photo
+  image_assortment:
+    - src: /static/catalog/uw000000/logo-sticker-610x376.png
+      alt: Sticker photo
+    - src: /static/catalog/uw000000/logo-sticker-610x376.png
+      alt: Sticker photo
+    - src: /static/catalog/uw000000/logo-sticker-610x376.png
+      alt: Sticker photo
+    - src: /static/catalog/uw000000/logo-sticker-610x376.png
+      alt: Sticker photo
+  description: |
+    Unredacted Word logo, die cut stickers. Collect emʼ, trade emʼ
+    with your friends, put them in mysterious places.
+  features:
+    - key: Filename
+      value: logo.svg
+    - key: Artist
+      value: "0xADADA"
+    - key: Format
+      value: Adhesive on printed paper
+    - key: Application
+      value: Google Drawings, VIM, SVGOMG
+    - key: Size
+      value: 3" x 2
+    - key: Edition
+      value: 1&ordm; / 50 copies
+    - key: Copyright
+      value: © 2018-2021 Unredacted Word, LLC
 
