--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -26,7 +26,7 @@ UW010101:
       This new translation brings a concrete edge to the text, elaborating upon
       the original, and adding annotations. Bringing fifty years of prominent
       radical thinking back to the text, from Baudrillard to Odell to
-      Zuboff—it’s clear that Debords’ book is more relevant in the era of social
+      Zuboff—it’s clear that Debord’s book is more relevant in the era of social
       media, the attention economy, and the emergence of Surveillance Capitalism
       than ever before.
     </p>
@@ -105,7 +105,7 @@ UW010301:
       This new translation brings a concrete edge to the text, elaborating upon
       the original, and adding annotations. Bringing fifty years of prominent
       radical thinking back to the text, from Baudrillard to Odell to
-      Zuboff—it’s clear that Debords’ book is more relevant in the era of social
+      Zuboff—it’s clear that Debord’s book is more relevant in the era of social
       media, the attention economy, and the emergence of Surveillance Capitalism
       than ever before.
     </p>
