--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -126,7 +126,7 @@ UW010301:
     - key: Release
       value: April 2021
     - key: Format
-      value: eBook (Website)
+      value: eBook (Website) / Progressive Web App
     - key: ISBN
       value: "9781736961803"
     - key: Size
@@ -137,6 +137,75 @@ UW010301:
       value: "Copyleft 🄯 2021 █ Unredacted Word, LLC, Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License"
     - key: Price
       value: "$0.00 (Gratis/Free)"
+
+UW010501:
+  name: "The Society of the Spectacle (Kindle eBook)"
+  sku: "UW010501"
+  url: "/catalog/uw010501-spectacle"
+  external_sku: B092CDGWYZ
+  date: 2021-04-14 21:30:00
+  quantity: 1
+  price: false
+  image:
+    src: /static/catalog/uw010501/kindle.jpg
+    alt: Cover of The Society of the Spectacle on Kindle
+  description: |
+    <p>
+      <img
+        src="/static/retail-amazon.svg" height="20"
+        style="vertical-align:sub;" alt="Amazon Kindle" />
+      edition of our new translation of Debord's <em>The Society of the
+      Spectacle</em>.
+    </p>
+    <p>
+      Debord describes and critiques the way we live. The power in these ideas
+      lies in their ability to question, identify, and name the common
+      assumptions of the present. Developing the concept of The Spectacle, he
+      describes the “gaze” of contemporary society. From its publication just
+      before, and ultimately influencing the May 1968 revolt in Paris and Occupy
+      Wall Street, this book continues to transform a wide range of progressive
+      philosophical and political movements, most notably anti-capitalism,
+      postmodernism, marxism, and anarchism.
+    </p>
+    <p>
+      This new translation brings a concrete edge to the text, elaborating upon
+      the original, and adding annotations. Bringing fifty years of prominent
+      radical thinking back to the text, from Baudrillard to Odell to
+      Zuboff—it’s clear that Debord’s book is more relevant in the era of social
+      media, the attention economy, and the emergence of Surveillance Capitalism
+      than ever before.
+    </p>
+    <p>
+      A new English Edition by Ron. Adams.
+    </p>
+    <p>
+      <a class="buy-now" style="border-radius:0.25rem"
+        href="https://www.amazon.com/dp/B092CDGWYZ">Buy on Amazon</a>
+    </p>
+    <p>
+      <a href="https://www.amazon.com/dp/B092CDGWYZ" title="Amazon">
+        <img src="/static/retail-amazon.svg" height="64" alt="Amazon Kindle logo" />
+      </a>
+    </p>
+  features:
+    - key: Title (Original)
+      value: La Societé du Spectacle
+    - key: Author
+      value: Guy Debord
+    - key: Translator
+      value: "Ron. Adams"
+    - key: Release
+      value: April 2021
+    - key: Format
+      value: eBook (Kindle)
+    - key: Price
+      value: "$7.99"
+    - key: ISBN
+      value: "9781736961803"
+    - key: ASIN
+      value: "B092CDGWYZ"
+    - key: Rights
+      value: "Copyleft 🄯 2021 █ Unredacted Word, LLC, Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License"
 
 UW000000:
   name: "Logo Sticker (SOLD OUT)"
