--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "start_url": "/spectacle/",
   "icons": [
     {
-      "src": "/spectacle/icon-192.png",
+      "src": "/spectacle/images/icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/spectacle/icon-512.png",
+      "src": "/spectacle/images/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
