--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -192,6 +192,14 @@ UW010501:
         href="https://www.kobo.com/us/en/ebook/the-society-of-the-spectacle-3">Buy at Kobo</a>
     </p>
     <p>
+      <a href="https://books.apple.com/us/book/the-society-of-the-spectacle/id1563244850?ls=1" title="Apple Books">
+        <img src="/static/retail-apple-books.svg" height="64" alt="Apple Books logo" />
+      </a>
+      <br />
+      <a class="buy-now" style="border-radius:0.25rem"
+        href="https://books.apple.com/us/book/the-society-of-the-spectacle/id1563244850?ls=1">Buy at Apple Books</a>
+    </p>
+    <p>
       <a href="https://play.google.com/store/books/details?id=fpUoEAAAQBAJ" title="Google Play Books">
         <img src="/static/retail-google-play-books.svg" height="64" alt="Google Play logo" />
       </a>
