--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -7,6 +7,9 @@ UW010101:
   quantity: 1
   price: "$34.95"
   cta: "Pre-order"
+  image:
+    src: /static/catalog/uw010101/01.jpg
+    alt: Cover of The Society of the Spectacle
   description: |
     <p>
       A linen bound hardcover edition of our new translation of Debord's <em>The
