--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -77,7 +77,9 @@ UW010101:
     - key: Edition
       value: First
     - key: Print run
-      value: 1&ordm; / 50 copies
+      value: 50 copies
+    - key: In Stock
+      value: 8 copies
     - key: Dust Jacket design
       value: "0xADADA"
     - key: Pricing detail
