--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -87,7 +87,7 @@ UW010101:
     - key: Rights
       value: "Copyleft 🄯 2021 █ Unredacted Word, LLC, Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License"
     - key: Shipping
-      value: "Ships within 48H of your order."
+      value: "US domestic orders ship within 48H of your order / International orders may be charged separately up to $25"
 
 
 UW010301:
