--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -56,6 +56,10 @@ UW010101:
         <a href="https://riffraffpvd.com/the-society-of-the-specatcle/" title="Riffraff Bookstore + Bar">Riffraff Bookstore + Bar</a>
         Providence, RI.
       </li>
+      <li>
+        <a href="http://www.ravencambridge.com/" title="Raven Used Books">Raven Used Books</a> Harvard Sqaure, Cambridge, MA.
+        Providence, RI.
+      </li>
     </ul>
   features:
     - key: Title (Original)
