--- a/_data/catalog.yml
+++ b/_data/catalog.yml
@@ -76,7 +76,7 @@ UW010102:
       value: "US domestic orders ship within 72H of your order / International orders may be charged separately up to $25"
 
 UW010301:
-  name: "The Society of the Spectacle (Website)"
+  name: "The Society of the Spectacle"
   sku: "UW010301"
   url: "/catalog/uw010301-spectacle"
   external_sku: TODO
